ANJO-SPYSCROLLMENU-FIX: overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,7 @@ body,
 div#root {
   height: 100%;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 div#root {
